--- a/static/style/App.css
+++ b/static/style/App.css
@@ -1257,7 +1257,7 @@ body, html {
       margin-bottom: 0.6666rem; }
       #goodDeatil .detailMain #words ul.wordmain .lq {
         position: absolute;
-        top: 46%;
+        top: 51%;
         right: 0;
         width: 1.08rem;
         height: 0.54rem;
@@ -1443,6 +1443,7 @@ body, html {
           background: #eeeeee; }
       #goodDeatil .detailMain #words ul.wordmain .li11 {
         margin-top: 0.54rem;
+        margin-bottom: .33rem;
         display: -webkit-flex;
         display: -moz-flex;
         display: -ms-flex;
