--- a/static/style/App.scss
+++ b/static/style/App.scss
@@ -1226,10 +1226,18 @@ body,html{
       width: 10rem;
       height: 10rem;
       .swiper-pagination-fraction{
-        width: 35px!important;
+        width: 0.9459459459459459rem!important;
         left: auto!important;
-        padding:0 10px!important;line-height:20px!important;height:20px!important;border-radius:10px!important;background-color:rgba(100,100,100,.6)!important;transform: translate(-6%,-8%)!important; bottom: 0!important;right: 0;top:auto !important;
-        font-size: 15px!important;
+        padding:0 0.2702702702702703rem!important;
+        line-height:0.5405405405405406rem!important;
+        height:0.5405405405405406rem!important;
+        border-radius:0.2702702702702703rem!important;
+        background-color:rgba(100,100,100,.6)!important;
+        transform: translate(-6%,-8%)!important;
+        bottom: 0!important;
+        right: 0;
+        top:auto !important;
+        font-size: 14px!important;
       }
     }
     @at-root #origin-img{
