--- a/static/style/App.scss
+++ b/static/style/App.scss
@@ -1279,7 +1279,7 @@ body,html{
         margin-bottom: $r25;
         .lq{
           position: absolute;
-          top: 51%;
+          top: 5.2rem;
           right: 0;
           width: $r40;
           height: $r20;
