--- a/static/style/App.css
+++ b/static/style/App.css
@@ -1225,7 +1225,7 @@ body, html {
         bottom: 0 !important;
         right: 0;
         top: auto !important;
-        font-size: 13px !important; }
+        font-size: 14px !important; }
     #origin-img {
       z-index: 9999;
       display: none;
@@ -1258,7 +1258,7 @@ body, html {
       margin-bottom: 0.6666rem; }
       #goodDeatil .detailMain #words ul.wordmain .lq {
         position: absolute;
-        top: 51%;
+        top: 5.2rem;
         right: 0;
         width: 1.08rem;
         height: 0.54rem;
