--- a/static/style/App.css
+++ b/static/style/App.css
@@ -1256,18 +1256,6 @@ body, html {
     #goodDeatil .detailMain #words ul.wordmain {
       position: relative;
       margin-bottom: 0.6666rem; }
-      #goodDeatil .detailMain #words ul.wordmain .lq {
-        position: absolute;
-        top: 5.2rem;
-        right: 0;
-        width: 1.08rem;
-        height: 0.54rem;
-        line-height: 0.54rem;
-        font-size: 0.324324rem;
-        color: #999;
-        border: 1px solid #999;
-        text-align: center;
-        border-radius: 10px; }
       #goodDeatil .detailMain #words ul.wordmain .li1 {
         height: 1.08rem; }
       #goodDeatil .detailMain #words ul.wordmain .li1 .title {
@@ -1346,10 +1334,23 @@ body, html {
           height: 0.135rem;
           background: #eeeeee; }
       #goodDeatil .detailMain #words ul.wordmain .li7 {
-        margin-top: 0.4055rem; }
-      #goodDeatil .detailMain #words ul.wordmain .li8 {
         position: relative;
-        margin-bottom: 0.4055rem; }
+        margin-top: 0.4055rem; }
+        #goodDeatil .detailMain #words ul.wordmain .li7 .lq {
+          position: absolute;
+          top: .1rem;
+          right: 0;
+          width: 1.08rem;
+          height: 0.54rem;
+          line-height: 0.54rem;
+          font-size: 0.324324rem;
+          color: #999;
+          border: 1px solid #999;
+          text-align: center;
+          border-radius: 10px; }
+      #goodDeatil .detailMain #words ul.wordmain .li8 {
+        margin-bottom: 0.4055rem;
+        position: relative; }
         #goodDeatil .detailMain #words ul.wordmain .li8:after {
           content: '';
           z-index: 3;
@@ -1445,6 +1446,7 @@ body, html {
       #goodDeatil .detailMain #words ul.wordmain .li11 {
         margin-top: 0.54rem;
         margin-bottom: .33rem;
+        height: .8rem;
         display: -webkit-flex;
         display: -moz-flex;
         display: -ms-flex;
@@ -1476,6 +1478,7 @@ body, html {
       #goodDeatil .detailMain #words ul.wordmain .li12 {
         position: relative;
         margin-bottom: 0.54rem;
+        height: .8rem;
         display: -webkit-flex;
         display: -moz-flex;
         display: -ms-flex;
